[project]
authors = [
  {name = "abersheeran", email = "me@abersheeran.com"},
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = ["baize<1.0.0,>=0.13.0", "pydantic<2.0,>=1.8", "typing-extensions<4.0.0,>=3.10.0"]
description = ""
dynamic = ["classifiers", "classifiers"]
license = {text = "Apache-2.0"}
name = "hintapi"
readme = "README.md"
requires-python = ">=3.7"
version = "0.22.0"

[project.urls]
documentation = "https://hintapi.abersheeran.com/"
homepage = "https://github.com/abersheeran/hintapi"
repository = "https://github.com/abersheeran/hintapi"

[project.optional-dependencies]
cli = ["click<9.0,>=8.0"]

[project.scripts]
index-cli = "hintapi.cli:index_cli"

[tool.isort]
profile = "black"

[tool.coverage.run]
omit = [
  "*/.venv/*",
  "*/tests/*",
  "hintapi/status.py",
  "hintapi/cli.py",
  "hintapi/routing/commands.py",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "return NotImplemented",
  "if False:",
  "assert False",
  "if typing.TYPE_CHECKING:",
  "if TYPE_CHECKING:",
  "pass",
]
show_missing = true
skip_covered = true

[tool.pdm]
includes = ["hintapi"]

[tool.pdm.dev-dependencies]
dev = [
  "flake8",
  "mypy",
  "types-click<8.0.0,>=7.1.0",
  "black",
  "isort",
]
docs = [
  "mkdocs[i18n]<2.0.0,>=1.2.1",
  "mkdocs-material<8.0.0,>=7.1.8",
  "mkdocs-static-i18n<1.0,>=0.16",
]
tests = [
  "pytest<7.0.0,>=6.2.5",
  "pytest-cov<3.0.0,>=2.8.1",
  "httpx~=0.20",
]

[build-system]
build-backend = "pdm.pep517.api"
requires = ["pdm-pep517"]
